DuPont DevSB/src/objects/Case_Action__c.object
<CustomObject>
    <description>The specific Actions that are taken as a result of the case</description>
    <fields>
        <fullName>ActionSubtype__c</fullName>
        <description>The specific Action taken (related to the Type) as a result of this case</description>
        <inlineHelpText>The specific Action taken (related to the Type) as a result of this case</inlineHelpText>
        <label>Action Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Change Material/Batch</fullName>
                </value>
                <value>
                    <fullName>Corrective Actions</fullName>
                </value>
                <value>
                    <fullName>Customer Return Material</fullName>
                </value>
                <value>
                    <fullName>Customer Sell Seed as Grain</fullName>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Defective Product Pull-Out</fullName>
                </value>
                <value>
                    <fullName>Field Test</fullName>
                </value>
                <value>
                    <fullName>Lab Analysis</fullName>
                </value>
                <value>
                    <fullName>Material Restitution - Current Sales Campaign</fullName>
                </value>
                <value>
                    <fullName>Material Restitution - Future Sales Campaign</fullName>
                </value>
                <value>
                    <fullName>Material Return</fullName>
                </value>
                <value>
                    <fullName>Monetary Restitution</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pardon Debt</fullName>
                </value>
                <value>
                    <fullName>Preventive Actions</fullName>
                </value>
                <value>
                    <fullName>Product Replacement</fullName>
                </value>
                <value>
                    <fullName>Sale as Grain</fullName>
                </value>
                <value>
                    <fullName>Sample Collection</fullName>
                </value>
                <value>
                    <fullName>Sample Pictures &amp; Details</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>The type or category of the Action taken as a result of this case</description>
        <inlineHelpText>The type or category of the Action taken as a result of this case</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Post Investigation</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Total_Cost__c</fullName>
        <description>The total actual cost for all costs related to the one solution action.</description>
        <label>Actual Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAPAId__c</fullName>
        <description>Read only (except Sys Admin). Id for CAPA document from EtQ Reliance.</description>
        <label>Reliance CAPA Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPAInvestigationPhase__c</fullName>
        <description>Read only (except Sys Admin). Reflects stage in CAPA investigation from EtQ Reliance.</description>
        <inlineHelpText>Reflects stage in CAPA investigation from EtQ Reliance.</inlineHelpText>
        <label>CAPA Investigation Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem Description/Initiation</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Develop Action Plan</fullName>
                </value>
                <value>
                    <fullName>Approve Action Plan</fullName>
                </value>
                <value>
                    <fullName>Implement Action Plan</fullName>
                </value>
                <value>
                    <fullName>Verify Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Closed - Effective</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Effective</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAPAPhaseChangeDate__c</fullName>
        <description>Read only (except Sys Admin). Date of last CAPA phase change in EtQ Reliance.</description>
        <label>CAPA Phase Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The related Case</description>
        <inlineHelpText>The related Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Actions</relationshipLabel>
        <relationshipName>Case_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Action complete date</description>
        <inlineHelpText>Actual Date of Completion</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Start_Date__c</fullName>
        <description>Action desired start date</description>
        <label>Desired Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Action due date</description>
        <inlineHelpText>Target Date of Completion</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by the trigger to check whether there is an Attachment attached to the record.</description>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Name__c</fullName>
        <description>Action related people, group, partner information</description>
        <label>Related Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelianceComplaintStatus__c</fullName>
        <description>Read only (except Sys Admin). Reflects complaint status captured in EtQ Reliance.</description>
        <label>Reliance Complaint Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Complaint Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelianceStatusChangeDate__c</fullName>
        <description>Read only (except Sys Admin). Date of last EtQ Reliance status change.</description>
        <label>Reliance Complaint Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Action subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Action</label>
    <nameField>
        <displayFormat>CAID-{0000000}</displayFormat>
        <label>Case Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Actions</pluralLabel>
    <recordTypes>
        <fullName>AGCP_CPC_EMEA_Complaint</fullName>
        <active>false</active>
        <description>Crop Protection EMEA Case Action</description>
        <label>AGCP-CPC EMEA Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Color_Case_Action</fullName>
        <active>false</active>
        <description>Used for Color specific Actions taken during the Case</description>
        <label>Color Case Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint_Result</fullName>
        <active>false</active>
        <description>Record type to capture complaint results</description>
        <label>Complaint Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCP_AP_Complaint_Action</fullName>
        <active>false</active>
        <label>DCP AP Complaint Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EtQ_Reliance_Action</fullName>
        <active>false</active>
        <description>Captures CAPA details from EtQ Reliance.</description>
        <label>EtQ Reliance Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pioneer_LA_AF_Complaint</fullName>
        <active>false</active>
        <label>Pioneer LA-AF Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_Case_Action</fullName>
        <active>false</active>
        <label>Portal Case Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Case_Action</fullName>
        <active>true</active>
        <description>Technical Case Actions</description>
        <label>Technical Case Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>